playing around with .name-card width to fix scaling on mobile view

--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ body {
 }
 
 .section {
-    width: 95% !important;
+    width: 100%;
     position: absolute;
     left: 0;
     top: 0;
@@ -245,8 +245,13 @@ body {
         -moz-box-shadow: 5px 5px 32px -9px rgba(0,0,0,0.4);
         box-shadow: 5px 5px 32px -9px rgba(0,0,0,0.4);
     }
+    
     #idly-logo {
         width: 50%;
+    }
+    
+    .ml3 {
+        width: 98% !important;
     }
 }
 
